--- a/oddsea/package.json
+++ b/oddsea/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "oddisee",
+  "name": "oddsea",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.9",
-    "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
+    "eslint-config-next": "13.4.5",
+    "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "tailwindcss": "3.3.2"
   }
 }
