--- a/oddsea/package.json
+++ b/oddsea/package.json
@@ -14,6 +14,7 @@
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-table": "^7.8.0"
   }
 }
