--- a/oddsea/package.json
+++ b/oddsea/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.9",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "fraction.js": "^4.3.6",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
